@@ -1,6 +1,5 @@
 package com.example.distributelock.lock;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import lombok.extern.slf4j.Slf4j;
@@ -10,14 +9,15 @@ import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.redis.core.script.RedisScript;
 import org.springframework.data.redis.core.types.Expiration;
 
+/** @author afu */
 @Slf4j
 public class RedisLock implements AutoCloseable {
 
-  private RedisTemplate redisTemplate;
-  private String key;
-  private String value;
-  // 单位：秒
-  private int expireTime;
+  private final RedisTemplate redisTemplate;
+  private final String key;
+  private final String value;
+  /** 超时时间 单位：秒 */
+  private final int expireTime;
 
   public RedisLock(RedisTemplate redisTemplate, String key, int expireTime) {
     this.redisTemplate = redisTemplate;
@@ -43,16 +43,17 @@ public class RedisLock implements AutoCloseable {
           // 序列化value
           byte[] redisValue = redisTemplate.getValueSerializer().serialize(value);
           // 执行setnx操作
-          Boolean result = connection.set(redisKey, redisValue, expiration, setOption);
-          return result;
+          assert redisKey != null;
+          assert redisValue != null;
+          return connection.set(redisKey, redisValue, expiration, setOption);
         };
 
     // 获取分布式锁
     Boolean lock = (Boolean) redisTemplate.execute(redisCallback);
-    return lock;
+    return Boolean.TRUE.equals(lock);
   }
 
-  public boolean unLock() {
+  public void unLock() {
     String script =
         "if redis.call(\"get\",KEYS[1]) == ARGV[1] then\n"
             + "    return redis.call(\"del\",KEYS[1])\n"
@@ -60,11 +61,10 @@ public class RedisLock implements AutoCloseable {
             + "    return 0\n"
             + "end";
     RedisScript<Boolean> redisScript = RedisScript.of(script, Boolean.class);
-    List<String> keys = Arrays.asList(key);
+    List<String> keys = List.of(key);
 
     Boolean result = (Boolean) redisTemplate.execute(redisScript, keys, value);
     log.info("释放锁的结果：" + result);
-    return result;
   }
 
   @Override
